<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    >

    <com.github.florent37.arclayout.ArcLayout
        android:id="@+id/arcLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:elevation="10dp"
        app:arc_cropDirection="cropInside"
        app:arc_height="30dp"
        app:arc_position="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detailPoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/poster_image"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

    </com.github.florent37.arclayout.ArcLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_marginTop="256dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/arcLayout">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detailCircleImage"
                    android:layout_width="100dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="?attr/colorSecondary"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/release_date"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.065"
                    app:layout_constraintStart_toEndOf="@+id/detailCircleImage"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    tools:text="@string/dummy_text"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/subtitle"
                    app:layout_constraintStart_toEndOf="@+id/detailCircleImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/desc"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <TextView
                    android:id="@+id/detailDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    android:padding="2dp"
                    tools:text="@string/dummy_text"
                    android:textColor="@color/subtitle"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/desc" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="44dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateRelease" />

                <TextView
                    android:id="@+id/dateRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:padding="2dp"
                    android:textColor="@color/subtitle"
                    android:textSize="12sp"
                    tools:text="@string/dummy_text"
                    app:layout_constraintStart_toEndOf="@+id/detailCircleImage"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabFav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    app:srcCompat="@drawable/baseline_favorite_border_black_24dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>