...
                <include layout="@layout/shimmer_item_list" />
                <include layout="@layout/shimmer_item_list" />
                <include layout="@layout/shimmer_item_list" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:paddingBottom="12dp"
            android:layout_marginBottom="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
...
